force-app/main/default/objects/Application_Log__c/Application_Log__c.object-meta.xml
<CustomObject>
    <description>This object will be used to capture and display the application log for custom development and custom batch processing.</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>APPLOG-{0000000000}</displayFormat>
        <label>Application Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>