force-app/main/default/objects/Application_Log__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <label>Application Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>