force-app/main/default/objects/Application_Log__c/fields/Custom_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Custom_Age_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Age Days</label>
    <type>Checkbox</type>
</CustomField>