force-app/main/default/objects/Application_Log__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This is used to store the actual detail of the job run or error message.</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>