force-app/main/default/objects/Application_Log__c/fields/Integration_Payload__c.field-meta.xml
<CustomField>
    <fullName>Integration_Payload__c</fullName>
    <description>For Integration related to store the integration payload</description>
    <label>Integration Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>