force-app/main/default/objects/Application_Log__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>This is used to store the Class Name or Job that trigger the logging</description>
    <label>Module</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>