force-app/main/default/objects/Application_Log__c/fields/Source_Function__c.field-meta.xml
<CustomField>
    <fullName>Source_Function__c</fullName>
    <description>This is used to store the Function within the class that trigger the exception</description>
    <label>Source Function</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>