force-app/main/default/objects/Application_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Application_Name__c</columns>
    <columns>NAME</columns>
    <columns>Module__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Debug_Level__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Description__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Source_Function__c</columns>
    <columns>Integration_Payload__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Processing_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>