force-app/main/default/objects/Application_Log__c/listViews/Job_Log.listView-meta.xml
<ListView>
    <fullName>Job_Log</fullName>
    <columns>NAME</columns>
    <columns>Source_Function__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Type__c</columns>
    <columns>Processing_Time__c</columns>
    <columns>Reference_Id__c</columns>
    <columns>Reference_Info__c</columns>
    <columns>End_Date__c</columns>
    <columns>Integration_Payload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Job Log</value>
    </filters>
    <label>Job Log</label>
    <language>en_US</language>
</ListView>